# safari

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml
docs/: dataset_registry.csv  how_to_continue.md  kappa_core_integration.md  model_artifacts.md  python_cpp_parity.md  roadmap.md  uam_docker_quickstart.md
scripts/: dump_safari_trace.py  package_safari_model.py  predict_safari_lgbm_v0.py  safari_features.py  safari_mac_start.sh  serve_safari.py  train_safari_centroid_v0.py  train_safari_lgbm_v0.py
